# confluence-pandoc-connect

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-run  LICENSE  Makefile  PRIVACY  README  README.md  bitbucket-pipelines.yml  build-and-push-image.bash  build-production.bash  confluence-pandoc-connect.cabal  generate-service-descriptor.bash  generate-service-descriptor.hs  install-micros.bash  load-and-push-docker.bash  micros-deploy.bash  plan-template.groovy  run-confluence.sh  save-docker-image.bash  service-descriptor.template.json  stack.yaml  to-production.bash
database/: bootstrap.sh  init-db.sh
migrations/: init-db.sh
migrations/sql/: V2__add_oauth_column.sql  V3__rebuild_tenant_index.sql
production/: Dockerfile
resources/: all.js  confluence-storage.lua
snaplets/connect/: connect.cfg
snaplets/heist/templates/: error_page.tpl  file_form.tpl  page_redirect_dialog.tpl  storage_formatted_response.tpl
src/: Application.hs  AtlassianConnect.hs  Confluence.hs  ConfluenceTypes.hs  EnvironmentHelpers.hs  Healthcheck.hs  Heartbeat.hs  JsonRpc.hs  Key.hs  LifecycleHandlers.hs  Main.hs  MicrosZone.hs  MigrationHandler.hs  Page.hs  Site.hs  SnapHelpers.hs  TenantJWT.hs  WithToken.hs
src/Persistence/: Instances.hs  PostgreSQL.hs  Tenant.hs
static/: screen.css
