name:                confluence-pandoc-connect
version:             0.1.0.3
synopsis:            Import documents into Confluence with Pandoc.
-- description:         
license:             GPL
license-file:        LICENSE
author:              Avi Knoll
maintainer:          aknoll@atlassian.com
copyright:           Copyright 2015 Avi Knoll <aknoll@atlassian.com>
category:            Web
build-type:          Simple
cabal-version:       >= 1.22

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable confluence-pandoc-connect
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  Build-depends:
      base                      >= 4.6     && < 5
    , aeson                     == 0.8.*
    , atlassian-connect-core    == 0.7.*
    , atlassian-connect-descriptor == 0.4.1.*
    , bytestring                >= 0.9.1   && < 0.11
    , case-insensitive          == 1.2.*
    , heist                     >= 0.14    && < 0.15
    , http-client               == 0.4.*
    , http-types                == 0.8.*
    , jwt                       == 0.6.*
    , lens                      >= 3.7.6   && < 4.12
    , MonadCatchIO-transformers >= 0.2.1   && < 0.4
    , mtl                       >= 2       && < 3
    , network-uri               == 2.6.*
    , pandoc                    == 1.15.*
    , postgresql-simple         >= 0.4.10  && < 0.5
    , resource-pool-catchio     == 0.2.*
    , split                     == 0.2.*
    , snap                      >= 0.13    && < 0.15
    , snap-core                 >= 0.9     && < 0.10
    , snap-server               >= 0.9     && < 0.10
    , snap-loader-static        >= 0.9     && < 0.10
    , snaplet-postgresql-simple >= 0.6
    , text                      == 1.2.*
    , time                      >= 1.1     && < 1.6
    , transformers              >= 0.4     && < 0.5
    , xmlhtml                   >= 0.1     && < 0.3

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
