name:                confluence-pandoc-connect
version:             0.2.0.0
synopsis:            Import documents into Confluence with Pandoc.
-- description:         
license:             GPL
license-file:        LICENSE
author:              Avi Knoll
maintainer:          aknoll@atlassian.com
copyright:           Copyright 2015 Avi Knoll <aknoll@atlassian.com>
category:            Web
build-type:          Simple
cabal-version:       >= 1.22

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable confluence-pandoc-connect
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  Build-depends:
      base
    , aeson
    , atlassian-connect-core
    , atlassian-connect-descriptor
    , bytestring
    , cabal-file-th
    , case-insensitive
    , directory
    , filepath
    , gitrev
    , heist
    , http-client
    , http-types
    , jwt
    , lens
    , lens-aeson
    , MonadCatchIO-transformers
    , mtl
    , network-uri
    , pandoc
    , postgresql-simple
    , process
    , resource-pool-catchio
    , split
    , snap
    , snap-core
    , snap-server
    , snap-loader-static
    , snaplet-postgresql-simple
    , text
    , time
    , transformers
    , unordered-containers
    , xmlhtml

  if flag(development)
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
